fix(root): removes unwanted gap from icons panel
removes unwanted gap and adds some padding to title to align panel headers

--- a/src/content/structured/styles/components/IconFinder/index.css
+++ b/src/content/structured/styles/components/IconFinder/index.css
@@ -12,15 +12,15 @@
   min-width: 12.5rem;
   background: var(--ic-architectural-20);
   border-right: 1px solid var(--ic-architectural-200);
-  padding: var(--ic-space-sm) var(--ic-space-md) var(--ic-space-lg);
+  padding: calc(var(--ic-space-md) + var(--ic-space-sm)) var(--ic-space-sm) var(--ic-space-md) var(--ic-space-lg);
   display: flex;
   flex-direction: column;
   gap: var(--ic-space-md);
+  /* padding-top: calc(var(--ic-space-md) + var(--ic-space-sm)); */
 }
 
 .icon-group-links:first-child {
   color: var(--ic-color-secondary-text);
-  margin-top: var(--ic-space-md);
 }
 
 .icon-group-links ic-link {
